# ppr

./: CMakeLists.txt  cl.hpp  main.cpp  program.cl  sum.cl
